# bonphyre_backend

./: .gitignore  .pre-commit-config.yaml  Dockerfile  docker-compose-prod.yaml  docker-compose.yaml  pyproject.toml  readme.md  sample.env
app/: main.py
app/config/: __init__.py  database.py  logger.py  logs.py
app/models/: __init__.py  base.py  contribution.py  project.py  user.py
app/routes/: __init__.py  contribution.py  project.py  user.py
app/schemas/: __init__.py  base.py  contribution.py  project.py  user.py
app/tests/: conftest.py  test_contribution.py  test_project.py  test_user.py
app/utils/: __init__.py  auth.py  database.py  jwt.py
server/: Dockerfile
